    - modified Smarty to pass itself to prefilter functions as the second
      parameter. (Andrei)
    - fixed syntax error when including a non-existant template with security
      enabled. (Monte)
    - fixed comments handling to allow commenting out template blocks. (Andrei)
    - implemented named capture buffers, with results accessible via
      $smarty.capture.<name>. (Andrei)
    - added ability to index arrays directly by numbers. (Andrei)
    - fixed bug with SMARTY_DIR not prepended to Config_File include. (Monte)

Version 1.4.4
-------------
    - fixed problem with including insecure templates with security enabled.
      (Monte)
    - numerous documentation updates. (Monte) 
    - added ENT_QUOTES to escapement of html. (Monte, Sam Beckwith)
    - implemented access to request variables via auto-assigned $smarty
      template variable. (Andrei)
    - fixed a bug with parsing function arguments inside {if} tags if a comma
      was present. (Andrei)
    - updated debug console with config file vars. (Monte)
    - added SMARTY_DIR constant as an alternative to relying on include_path.
      (Monte)
    - added popup_init and popup functions (requires overlib.js). (Monte)
    - updated debug console with config file vars. (Monte)
    - added debugging url control. (Monte)
    - added 'quotes' type to escape modifier. (Monte, Mike Krus)
    - added 'total' and 'iteration' section properties. (Andrei)
    - added 'start', 'max', and 'step' section attributes/properties. (Andrei)
    - fixed a bug with security checking of functions inside {if} tags.
      (Andrei)
    - fixed a bug in Config_File that would incorrectly booleanize values that
      weren't really booleans. (Andrei)

Version 1.4.3
-------------
    - added regex_replace modifier, documented. (Monte)
    - added debugging console feature and custom function assign_debug_info,
      documented. (Monte)
    - added 'scope' attribute for {config_load}, 'global' is now deprecated but